<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.financialapplication.NewPasswordActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="145dp"
        android:onClick="onChangeClick"
        android:text="@string/changePassword" />

    <EditText
        android:id="@+id/confirmPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_below="@+id/confirmPassword"
        android:ems="10"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="47dp"
        android:text="@string/newPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/newPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPassword"
        android:layout_below="@+id/newPassword"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/newPasswordHint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPassText"
        android:layout_centerVertical="true"
        android:text="@string/confirmPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>