<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3ecef"
    tools:context=".ReportDateActivity"
    tools:ignore="MergeRootFrame" >

     <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginTop="116dp"
        android:text="@string/startDate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#ffffff"
        android:padding="5dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dateHint" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:text="@string/endDate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endText"
        android:layout_alignLeft="@+id/endText"
        android:background="#ffffff"
        android:padding="5dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dateHint" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_rectanglebutton"
        android:onClick="onDateClick"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
