<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3ecef"
    tools:context="edu.gatech.financialapplication.IncomeSourceActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/totalDepositsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalDeposits"
        android:layout_alignBottom="@+id/totalDeposits"
        android:layout_alignParentRight="true"
        android:layout_marginRight="27dp"
        android:text="@string/unused"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/totalDeposits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dateText"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="19dp"
        android:text="@string/totalDeposits"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/depositLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/totalDeposits"
        android:paddingBottom="5dp" >

    </ListView>

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/totalDeposits"
        android:layout_below="@+id/title"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#16718d"
        android:gravity="center"
        android:textColor="#ffffff"
        android:text="@string/isrTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/back"
        android:layout_width="58dp"
        android:layout_height="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/back_button"
        android:onClick="onBackClick"/>

</RelativeLayout>
