<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="top"
    tools:context=".TransactionActivity" >

    <Button
        android:id="@+id/deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onDepositClick"
        android:text="@string/deposit" />

    <Button
        android:id="@+id/withdrawal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deposit"
        android:layout_alignBottom="@+id/deposit"
        android:layout_alignParentRight="true"
        android:onClick="onWithdrawalClick"
        android:text="@string/withdrawal" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/deposit"
        android:onClick="onCreateAccount"
        android:text="@string/createAccount" />

    <ListView
        android:id="@+id/accountLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/createAccount"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_key"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
    </ListView>

</RelativeLayout>