<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.financialapplication.ForgotPasswordActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="134dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userText"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/userText"
        android:onClick="onClick"
        android:text="@string/submit" />

    <android.widget.TextView
        android:id="@+id/textViewWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:text="@string/warning"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/warning_color" />

</RelativeLayout>